[tool.poetry]
name = "Cyclostationary-analysis-for-Bearing-failure-identification"
version = "0.1.0"
description = "Bearing fault impulsive components filtering"
authors = ["Edgar Sierra <efsierraa@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.2"
scipy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
